[package]
name = "solana_hello_world"
version = "0.0.1"
description = "My first solana program"
authors = ["Bayu Aldi Yansyah <bayualdiyansyah@gmail.com>"]
repository = "https://github.com/pyk/solana-hello-world"
license = "Apache-2.0"
homepage = "https://github.com/pyk/solana-hello-world"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "0.8.1"
borsh-derive = "0.9.0"
solana-program = "1.7.4"

[dev-dependencies]
solana-sdk = "1.7.4"
solana-program-test = "1.7.4"

[lib]
name = "solana_hello_world"
crate-type = ["cdylib", "lib"]